[project]
name = "exploring-exploration"
version = "0.1.0"
description = ""
authors = [
    {name = "Leonard Papenmeier",email = "leonard.papenmeier@posteo.de"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)",
    "cython (>=3.1.2,<4.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]
packages = [
    { include = "exploring_exploration",  from = "." },
]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "Cython", "numpy", "setuptools"]
build-backend = "poetry.core.masonry.api"
